# DLNLP2025-Group07

./: .gitignore  README.md  pyproject.toml
distilBERT/: README.md  distiller.py  extract_wikipedia_data.ipynb  lm_seqs_dataset.py  plot_results.ipynb  test_distilBERT_SST2.ipynb  test_distilBERT_wiki.ipynb  test_distilBERT_wiki_small.ipynb  test_distilBERT_wiki_small_2_epochs.ipynb  train.py  train.sh
distilBERT/distilbert_imdb/: distilbert_imdb.ipynb  distilbert_imdb_runs.txt  distilbert_pretrained_imdb_runs.txt
distilBERT/scripts/: binarized_data.py  extract_distilbert.py
distilBERT/short_distil/: distiller_commented.py  distiller_short.py  my_train.py
distilBERT/training_configs/: distilbert-small-uncased.json
