[project]
name = "distilbert"
version = "0.1.0"
description = ""
authors = [
    {name = "Lukas Fink",email = "lukasfink1000@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "transformers[torch] (>=4.52.3,<5.0.0)",
    "datasets (>=3.6.0,<4.0.0)",
    "evaluate (>=0.4.3,<0.5.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "huggingface-hub (>=0.32.2,<0.33.0)",
    "protobuf (>=6.31.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
